--- a/assignment wk12/q1.Rmd
+++ b/assignment wk12/q1.Rmd
@@ -14,9 +14,67 @@ library(sandwich)
 library(stargazer)
 ```
 
-## How the data was sourced
+## IID: How the data was sourced
 The data was scraped from the YouTube lists, "Recently Featured", "Most Viewed", "Top Rated" and "Most Discussed", for "Today", "This Week", "This Month" and "All Time" where the crawler was run in rates of 2-3 days. As a result of these types of lists, there is an issue with IID since there would be more representation of recent videos. This would mean that one datapoint (video) can inform features of another video. 
 An couple examples of how this could manifest is:
 - Since the scraped videos are on top lists, this would mean that these videos inform of each other since they are already popular. One could speculate they are gaining more views because of endorsements, marketing or professional editing.
 - Perhaps a particularly trending topic is attracting a lot of view attention. Due it a video being related to that topic at the time, these videos can inform other videos that are within the same topic. 
 
+
+## Collinearity 
+
+
+## Check if the input variables inform each other
+
+The regression we are analysing is the following: $ln(views)=β_0 + β_1 rate + β_3 length$
+
+Where the input, $rate$, is a representation of the average rating of the video and $length$ is the video duration in seconds.
+
+The risk of collinearity here is $length$ and $rate$ could be related to one another.
+
+```{r Create the model, message=FALSE, echo=FALSE}
+youtube_data <- read.table(file = "videos.txt", sep = "\t", header = TRUE)
+youtube_model = lm(views ~ rate + length, data = youtube_data)
+```
+As we can see from the below results which reflect the coefficients of the model inputs, there is no sign of perfect collinearity since both variables have not been dropped. 
+
+```{r Reveal the coefficients}
+youtube_model$coefficients
+Check if the input variables inform each other
+
+The regression we are analysing is the following: $ln(views)=β_0 + β_1 rate + β_3 length$
+
+Where the input, $rate$, is a representation of the average rating of the video and $length$ is the video duration in seconds.
+
+The risk of collinearity here is $length$ and $rate$ could be related to one another.
+
+```{r Create the model, message=FALSE, echo=FALSE}
+youtube_data <- read.table(file = "videos.txt", sep = "\t", header = TRUE)
+youtube_model = lm(views ~ rate + length, data = youtube_data)
+```
+As we can see from the below results which reflect the coefficients of the model inputs, there is no sign of perfect collinearity since both variables have not been dropped. 
+
+```{r Reveal the coefficients}
+youtube_model$coefficients
+
+
+## Linear Conditional Expectation: Compare the predicted and residuals of model
+
+The regression we are analysing is the following: $ln(views)=β_0 + β_1 rate + β_3 length$
+
+```{r Create the model, message=FALSE, echo=FALSE}
+youtube_data <- read.table(file = "videos.txt", sep = "\t", header = TRUE)
+youtube_model = lm(views ~ rate + length, data = youtube_data)
+```
+
+```{r Create graph of residuals vs predicted, echo=FALSE, message=FALSE}
+youtube_resid <- resid(youtube_model)
+youtube_pred <- predict(youtube_model)
+plot(youtube_pred, youtube_resid, main = "Residual Plot",
+     xlab = "Predicted Values", ylab = "Residuals")
+abline(h = 0, col = "red", lty = 2)
+```
+
+The above plot has some visual indication of a cluster in the range of 10,000 to 13,000 in the Predicted Values, where ther Residual values range from 0 to 50,000. This is a violation of the LCE (Linear Conditional Expectation)
+
+There is also some exponential pattern rising from 0 to 12,000 in the Predicted Values range, however this seems to cut off from this approximate point onwards. This can also indicate another violation of the LCE.
