--- a/assignment wk12/q1.Rmd
+++ b/assignment wk12/q1.Rmd
@@ -12,6 +12,8 @@ library(car)
 library(lmtest)
 library(sandwich)
 library(stargazer)
+library(ggplot2)
+library(GGally)
 ```
 
 ## IID: How the data was sourced
@@ -56,7 +58,22 @@ As we can see from the below results which reflect the coefficients of the model
 
 ```{r Reveal the coefficients}
 youtube_model$coefficients
+```
+```{r}
+# correlation plot for the continuous variables
+ggpairs(videos[c(3, 5:8)])
+```
 
+```{r}
+youtube_data$log_views <- log(youtube_data$views)
+
+log_model <- lm(log_views~rate+length, data=videos) # model with log tranformation on views
+vif(log_model)
+
+vif_values <- vif(log_model)
+barplot(vif_values, horiz=TRUE)
+abline(v = 5)
+```
 
 ## Linear Conditional Expectation: Compare the predicted and residuals of model
 
