--- a/assignment wk12/HW12.Rmd
+++ b/assignment wk12/HW12.Rmd
@@ -27,6 +27,8 @@ Additionally, because the crawler runs every 2-3 days, there may be duplicates i
 
 Given the way the data was collected, it is clear there are some violations to the IID assumption. The clustering of videos, skewed representation, duplicated data, and overrepresentation of popular videos are all factors that could impact our ability to pass the IID assumption, and therefore the use of a Classical Linear Model.
 
+\newpage
+
 ## 1.2 Collinearity
 
 The regression we are analysing is the following: $ln(views)=β_0 + β_1 rate + β_3 length$
@@ -42,29 +44,25 @@ youtube_data <- subset(youtube_data, !is.na(views))
 youtube_data$residuals <- resid(youtube_model)
 ```
 
-As we can see from the below results which reflect the coefficients of the model inputs, there is no sign of perfect collinearity since both variables have not been dropped.
+The correlation between length and rate is not especially high and the scatterplot of the two explanatory variables does not show that they are highly correlated.
 
-```{r Reveal the coefficients}
-youtube_model$coefficients
+```{r correlation plot, echo=FALSE, message=FALSE}
+ggpairs(videos[c(5, 7)]) + ggtitle("Correlation Plot")
 ```
 
-Furthermore, the correlation matrix below shows a weak correlation (r=0.158) between our two independent variables: rate and length. We can therefore conclude that there is no perfect or near perfect multicollinearity in our model.
+The VIF for both length and rate is 1.03. VIF values below 5 are considered not highly correlation.
 
-```{r}
-# correlation plot for the continuous variables
-ggpairs(youtube_data[c(3, 5:8)])
+```{r vif values, echo=FALSE, message=FALSE}
+vif(youtube_model)
+
+vif_values <- vif(youtube_model)
+barplot(vif_values, main = "VIF Values", horiz=TRUE, xlim = c(0, 6), col="steelblue")
+abline(v = 5, lwd = 3, lty = 2)
 ```
 
-```{r}
-youtube_data$log_views <- log(youtube_data$views)
+From the correlation plot and the VIF values we can conclude that the explanatory variables are not highly correlated and the no perfect colinearity assumption is met.
 
-log_model <- lm(log_views~rate+length, data=youtube_data) # model with log transformation on views
-vif(log_model)
-
-vif_values <- vif(log_model)
-barplot(vif_values, horiz=TRUE, , xlim = c(0, 6))
-abline(v = 5)
-```
+\newpage
 
 ## 1.3. Linear Conditional Expectation
 
@@ -117,7 +115,36 @@ grid.arrange(plot1, plot2, ncol = 2)
 
 From these plots, they both imply potential breaches to LCE, however it's difficult to be certain with $Rate$ due to the noise, whereas with $Length$, the fanning effect also makes it difficult to be certain, but both are not clear 0 means, the inclination would be towards the model not meeting LCE requirements.
 
-## Q1.5 Normal Distribution of Errors
+\newpage
+
+## 1.4 Homoskedastic Errors
+
+The homoskedastic errors assumption is that the residuals have equal variance for all predicted values of the model.
+
+By examining the residual plot, we can see that there appears to be 3 distint clusters that are formed in the residual plot that have differing variances, with the middle cluster having the largest variance. Additionally, in the middle cluster, there seems to be a fanning out of the residuals as the fitted values increases.
+
+```{r Residual plot, echo=FALSE, message=FALSE}
+p <- ggplot(youtube_model, aes(x= .fitted,
+                y = .resid)) +
+  geom_point() + 
+  labs(title = "Fitted vs Residual Plot",
+       x = "Fitted Values",
+       y = "Residuals")
+
+p
+```
+
+This assumption can also be assessed by running a Breusch-Pagan test. The null assumption of the Breusch-Pagan test is that the errors are homoskedastic, the p-value is below 0.05, so we reject the null hypothesis and conclude that there is evidence of heteroskedasticity.
+
+```{r, echo=FALSE, message=FALSE}
+bptest(mod)
+```
+
+Based upon analyzing the residual plot and the Breusch-Pagan test, the homoskedastic error assumption is not met.
+
+\newpage
+
+## 1.5 Normal Distribution of Errors
 
 The last assumption of the Classical Linear Model is that it must have normally distributed errors. As we can see in the QQ-plot below, the vast majority of the points fall on the reference line, indicating that the normally distributed errors assumption is met.
 
