--- a/lab_2_submission/lab_2_submission_08_04.rmd
+++ b/lab_2_submission/lab_2_submission_08_04.rmd
@@ -1,8 +1,8 @@
 ---
 title: "Chicago Public Schools Mathematics and Literacy Skills"
 author: 'Austen Lowitz, Annie DeForge, William Teng'
-output:
-  pdf_document
+output:  pdf_document
+geometry: "left=0.5in,right=0.5in,top=0.5in,bottom=0.5in"
 header-includes:
  \usepackage{wrapfig}
  \usepackage{float}
@@ -29,7 +29,8 @@ theme_set(theme_bw())
 # setwd("C:/Users/Annie's Computer/Documents/DS 203/lab 2/") working directory for annie
 
 # Set columns to focus on
-school_columns <- c("Growth.Overall.Reading.and.Math",
+school_columns <- c("Student.Performance.Reading.and.Math",
+                    "Growth.Overall.Reading.and.Math",
                     "Student.Attendance.2012...Percent",
                     "Misconducts.Resulting.in.Suspensions.2012...Percent",
                     "Average.Days.of.Suspension.2012",
@@ -39,13 +40,14 @@ school_columns <- c("Growth.Overall.Reading.and.Math",
                     "Safety",
                     "Effective.Leaders",
                     "Ambitious.Instruction",
-                    "Collaborative.Teachers")
-
+                    "Collaborative.Teachers",
+                    "Longitude",
+                    "Latitude")
 
 # Read in initial data : 460 Records
 my_data <- read.csv("chicago-public-schools-elementary-school-progress-report-card-2012-2013-1.csv")[, school_columns] 
 
-my_data <- read.csv("chicago-public-schools-elementary-school-progress-report-card-2012-2013-1.csv") 
+# my_data <- read.csv("chicago-public-schools-elementary-school-progress-report-card-2012-2013-1.csv") 
 
 
 # Filter out NULLs : 416 Records
@@ -72,20 +74,17 @@ my_data$Ambitious.Instruction <- factor(my_data$Ambitious.Instruction, levels = 
 
 my_data$Collaborative.Teachers <- factor(my_data$Collaborative.Teachers, levels = c("Very Weak", "Weak", "Neutral", "Strong", "Very Strong"), labels = c(1, 2, 3, 4, 5))
 
-# Convert numeric columns into numeric
-my_data$Average.Days.of.Suspension.2012 <- as.numeric(my_data$Average.Days.of.Suspension.2012)  
+# my_data$Involved.Families <- as.numeric(my_data$Involved.Families)
 
-my_data$Involved.Families <- as.numeric(my_data$Involved.Families)
+#my_data$Supportive.Environment <- as.numeric(my_data$Supportive.Environment)
 
-my_data$Supportive.Environment <- as.numeric(my_data$Supportive.Environment)
+#my_data$Safety <- as.numeric(my_data$Safety)
 
-my_data$Safety <- as.numeric(my_data$Safety)
+#my_data$Effective.Leaders <- as.numeric(my_data$Effective.Leaders)
 
-my_data$Effective.Leaders <- as.numeric(my_data$Effective.Leaders)
+#my_data$Ambitious.Instruction <- as.numeric(my_data$Ambitious.Instruction)
 
-my_data$Ambitious.Instruction <- as.numeric(my_data$Ambitious.Instruction)
-
-my_data$Collaborative.Teachers <- as.numeric(my_data$Collaborative.Teachers)
+#my_data$Collaborative.Teachers <- as.numeric(my_data$Collaborative.Teachers)
 
 my_data$Growth.Overall.Reading.and.Math <- as.numeric(gsub("%", "", my_data$Growth.Overall.Reading.and.Math)) / 100
 
@@ -94,9 +93,24 @@ my_data$Student.Attendance.2012...Percent <- as.numeric(gsub("%", "", my_data$St
 my_data$Teacher.Attendance.2012...Percent <- as.numeric(gsub("%", "", my_data$Teacher.Attendance.2012...Percent)) / 100
                     
 my_data$Misconducts.Resulting.in.Suspensions.2012...Percent <- as.numeric(gsub("%", "", my_data$Misconducts.Resulting.in.Suspensions.2012...Percent)) / 100
+                    
+my_data$Student.Performance.Reading.and.Math <- as.numeric(gsub("%", "", my_data$Student.Performance.Reading.and.Math)) / 100
 
 # Drop nulls in dependent variable. For some reason the code above did not catch all nulls (don't know why)
 my_data <- my_data[complete.cases(my_data$Growth.Overall.Reading.and.Math), ]
+my_data <- my_data[complete.cases(my_data$Student.Performance.Reading.and.Math), ]
+
+# Changing the name of columns because they are too long for the stargazer
+my_data <- my_data %>%
+  rename(Suspensions.Percent = Misconducts.Resulting.in.Suspensions.2012...Percent)
+my_data <- my_data %>%
+  rename(Growth.Reading.and.Math = Growth.Overall.Reading.and.Math)
+my_data <- my_data %>%
+  rename(Student.Attendance = Student.Attendance.2012...Percent)
+my_data <- my_data %>%
+  rename(Suspension.Days = Average.Days.of.Suspension.2012)
+my_data <- my_data %>%
+  rename(Teacher.Attendance = Teacher.Attendance.2012...Percent)
 
 ```
 
@@ -190,19 +204,60 @@ dim(my_data)
 
 ```{r Create some models}
 # Naive Model: A few input variables
-model_naive <- lm(Growth.Overall.Reading.and.Math ~ Student.Attendance.2012...Percent +  Involved.Families + Collaborative.Teachers, data = my_data)
+model_naive <- lm(Student.Performance.Reading.and.Math ~ Student.Attendance, data = my_data)
 
 # Complex Model: All the variables
-model_complex <- lm(Growth.Overall.Reading.and.Math ~  Student.Attendance.2012...Percent + Misconducts.Resulting.in.Suspensions.2012...Percent + Average.Days.of.Suspension.2012 + Teacher.Attendance.2012...Percent + Involved.Families + Supportive.Environment + Safety + Effective.Leaders + Ambitious.Instruction + Collaborative.Teachers, data = my_data)
+model_complex <- lm(Student.Performance.Reading.and.Math ~ Growth.Reading.and.Math +
+                    Student.Attendance +
+                    Suspensions.Percent +
+                    Suspension.Days +
+                    Teacher.Attendance +
+                    Involved.Families +
+                    Supportive.Environment +
+                    Safety +
+                    Effective.Leaders +
+                    Ambitious.Instruction +
+                    Collaborative.Teachers +
+                    Longitude +
+                    Latitude, data = my_data)
 
+# Wald Test: Controllable variables
+model_controllable <- lm(Student.Performance.Reading.and.Math ~ Student.Attendance +
+                        Teacher.Attendance +
+                        Involved.Families +
+                        Supportive.Environment +
+                        Safety +
+                        Effective.Leaders +
+                        Ambitious.Instruction +
+                        Collaborative.Teachers, data = my_data)
+
+# Wald Test: Controllable variables + Geolocation
+model_controllable_geo <- lm(Student.Performance.Reading.and.Math ~ Student.Attendance +
+                            Teacher.Attendance +
+                            Involved.Families +
+                            Supportive.Environment +
+                            Safety +
+                            Effective.Leaders +
+                            Ambitious.Instruction +
+                            Collaborative.Teachers +
+                            Longitude + 
+                            Latitude, data = my_data)
 ```
 
-```{r}
+```{r, echo=FALSE, message=FALSE}
 summary(model_naive)
 ```
 
-```{r}
+```{r, echo=FALSE, message=FALSE}
 summary(model_complex)
+```
+
+```{r, echo=FALSE, message=FALSE}
+summary(model_controllable)
+```
+
+```{r, echo=FALSE, message=FALSE}
+summary(model_controllable_geo)
 ```
 
 # Assumptions
@@ -266,6 +321,20 @@ stargazer(model_complex, model_standardized,
 Additionally, we tried standardizing the input data and noticed the only difference in results were the scaling of the coefficients. The R^2, standard errors and F-statistic remained the same between both standardized and unstandardized models since subtracting the mean and dividing by the standard deviation does not change the underlying relationship the data has with the dependent variable. 
 
 # Regression Table - William
+
+```{r Stargazer Table, message=FALSE, echo=FALSE, results='asis'}
+
+stargazer(model_naive, model_complex, model_controllable, model_controllable_geo,
+          title = "Model Comparison",
+          column.labels = c("Naive", "Complex", "Controllable", "Controllable Geo"),
+          dep.var.caption = "Regression Table",
+          dep.var.labels.include = FALSE,
+          single.row = TRUE,  # Combine into a single row
+          type = "latex", # Output in LaTeX format
+          digits=2,
+          font.size = 'small'
+          ) 
+```
 
 # Discussion of Results - Austen
 
